--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
           <div class="letter-content">
             <h1>My Dearest Love,</h1>
             <p>
-              Every moment with you feels like a dream I never want to wake up
-              from.
+              To the moment I wake up until I go to sleep, know that I you're 
+              the only one that runs on my mind. 
             </p>
             <p>
-              Your smile brightens even my darkest days, and your love gives me
-              strength I never knew I had.
+              I cherish all of the memories that we made, I yearn for you when you're away 
+              and I hope with each passing day, our love grows more. 
             </p>
-            <p>When I look into your eyes, I see my entire world.</p>
+            <p>Thank you for always understanding me, thank you for always being there for me, thank you for wiping my
+              tears when I cried, for wiping my sweat when it's really hot, and  staying when we're challenging any problems.</p>
             <p>
-              I cherish every laugh we share, every tear we've wiped away, and
-              every challenge we've overcome together.
+              I will always be there for you, 
+              and I will always love you, always☺️. 
             </p>
-            <p>You are my best friend, my confidant, my soulmate.</p>
-            <p>I promise to love you more with each passing day.</p>
+            
             <p class="signature">Forever yours,</p>
-            <p class="signature">[Your Name]</p>
+            <p class="signature">Mikekk</p>
             <button id="close-btn" class="letter-btn">Close Letter</button>
           </div>
         </div>
